[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/UI/DialogueBubble.gd" id="1_script"]

[node name="DialogueBubble" type="Node2D"]
z_index = 10
script = ExtResource("1_script")

[node name="BubbleBackground" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -10.0
color = Color(0.1, 0.1, 0.1, 0.8)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -55.0
offset_top = -45.0
offset_right = 55.0
offset_bottom = -15.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "..."
scroll_active = false
autowrap_mode = 2

[node name="TypewriterTimer" type="Timer" parent="."]
wait_time = 0.03

[connection signal="timeout" from="TypewriterTimer" to="." method="_on_typewriter_timer_timeout"]
